--- a/bitfield/Cargo.toml
+++ b/bitfield/Cargo.toml
@@ -14,3 +14,4 @@ trybuild = { version = "1.0.49", features = ["diff"] }
 
 [dependencies]
 bitfield-impl = { path = "impl" }
+syn = { version = "2.0.100", features = ["extra-traits", "full"] }
