--- a/bitfield/impl/Cargo.toml
+++ b/bitfield/impl/Cargo.toml
@@ -8,4 +8,6 @@ publish = false
 proc-macro = true
 
 [dependencies]
-# TODO
+proc-macro2 = "1.0.94"
+quote = "1.0.40"
+syn = { version = "2.0.100", features = ["extra-traits", "full"] }
